<resources>
    <string name="app_name">Rapid Unit Converter</string>
    <string name="splash_txt">Rapid Unit Converter</string>
    <string name="img_content_description">Icon</string>
    <string name="length_txt">Length</string>
    <string name="speed_icon">speed icon</string>
    <string name="length_icon">length icon</string>
    <string name="first_cv">first</string>
    <string name="second_cv">second</string>
    <string name="three_cv">three</string>
    <string name="four_cv">four</string>
    <string name="five_cv">five</string>
    <string name="six_cv">six</string>
    <string name="result">Result</string>
    <string name="our_team">Our Team</string>
    <string name="kishan">Kishan</string>
    <string name="android_developer">Android Developer</string>
    <string name="harsh">Harsh</string>
    <string name="ux_designer">UX Designer</string>
    <string name="address">Address</string>
    <string name="address_line_one">Bhavanagar Highway, Rk University,</string>
    <string name="address_line_two">Tramba, Rajkot, 360–020,</string>
    <string name="address_line_three">Gujarat, India</string>
    <string name="contact">Contact</string>
    <string name="kishan_patel">kishan Patel</string>
    <string name="email">ksakkhiya622@rku.ac.in</string>
    <string name="contact_number">63535 88336</string>
    <string name="person_icon">Person Icon</string>
    <string name="email_icon">Email Icon</string>
    <string name="pone_icon">Pone Icon</string>
<!--    <string name="linkedin_icon_kishan">Linkedin Icon Kishan</string>-->
<!--    <string name="linkedin_icon_harsh">Linkedin Icon Harsh</string>-->
    <string name="convert">Convert</string>
    <string name="autofillhint">Number</string>
    <string name="time_txt">Time</string>
    <string name="digital_storage">Digital Storage</string>
    <string name="area_txt">Area</string>
    <string name="mass_txt">Mass</string>
    <string name="weather_txt">Weather</string>
    <string name="input_hint_txt">Input</string>
    <string name="btn_convert_txt">Convert</string>
    <string name="ds_txt">Data</string>
    <string name="spinner_icon">Spinner Icon</string>
    <string name="about">About</string>
    <string name="about_msg">Our application is very light-weight. All units can be easily converted and it\'s easy to use.</string>
    <string name="version">Version</string>
    <string name="last_update">Last Update</string>
    <string name="april_2022">April 2022</string>
    <string name="emty_sb_msg">Filed is Empty</string>
    <string name="sb_btn">Close</string>
    <string name="type">Type</string>
    <string name="select">Select</string>
    <string name="enter_a_number">Enter a Number</string>

    <string-array name="spn_length">
        <item>Foot To Inch</item>
        <item>Inch To Foot</item>
        <item>Kilometer To Meter</item>
        <item>Meter To Kilometer</item>
        <item>Centimeter To Inch</item>
        <item>Inch To Centimeter</item>
        <item>Foot To Meter</item>
        <item>Meter To Foot</item>
        <item>Yard To Foot</item>
        <item>Foot To Yard</item>
    </string-array>

    <string-array name="spn_weather">
        <item>Celsius To Fahrenheit</item>
        <item>Fahrenheit To Celsius</item>
    </string-array>

    <string-array name="spn_mass">
        <item>Kilogram To Gram</item>
        <item>Gram To Kilogram</item>
        <item>Milligram To Microgram</item>
        <item>Microgram To Milligram</item>
        <item>Quintal To Kilogram</item>
        <item>Kilogram To Quintal</item>
        <item>Tonne To Kilogram</item>
        <item>Kilogram To Tonne</item>
    </string-array>

    <string-array name="spn_area">
        <item>Hectare To Acre</item>
        <item>Acre To Hectare</item>
        <item>Hectare To Square Foot</item>
        <item>Acre To Square Foot</item>
        <item>Square Foot To Square Inch</item>
        <item>Square Inch To Square Foot</item>
        <item>Square Yard To Square Foot</item>
        <item>Square Foot To Square Yard</item>
    </string-array>

    <string-array name="spn_time">
        <item>Hour To Minute</item>
        <item>Minute To Hour</item>
        <item>Minute To Second</item>
        <item>Second To Minute</item>
        <item>Hour To Second</item>
        <item>Second To Hour</item>
        <item>Month To Day</item>
        <item>Day To Month</item>
        <item>Year To Day</item>
        <item>Day To Year</item>
    </string-array>

    <string-array name="spn_digital_storage">
        <item>Byte To Bit</item>
        <item>Bit To Byte</item>
        <item>Nibble To Bit</item>
        <item>Bit To Nibble</item>
        <item>Kilobyte To Byte</item>
        <item>Byte To Kilobyte</item>
        <item>Megabyte To Kilobyte</item>
        <item>Gigabyte To Megabyte</item>
        <item>Terabyte To Gigabyte</item>
        <item>Megabyte To Gigabyte</item>
    </string-array>


</resources>
